--- a/Iris classification.ipynb
+++ b/Iris classification.ipynb
@@ -31,45 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "7cb4c97b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: numpy in c:\\users\\dell\\appdata\\roaming\\python\\python39\\site-packages (1.22.4)\n",
-      "Collecting numpy\n",
-      "  Downloading numpy-2.0.2-cp39-cp39-win_amd64.whl (15.9 MB)\n",
-      "     ---------------------------------------- 15.9/15.9 MB 1.8 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\dell\\appdata\\roaming\\python\\python39\\site-packages (1.3.0)\n",
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.5.1-cp39-cp39-win_amd64.whl (11.0 MB)\n",
-      "     ---------------------------------------- 11.0/11.0 MB 1.3 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\dell\\appdata\\roaming\\python\\python39\\site-packages (from scikit-learn) (1.7.3)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\dell\\appdata\\roaming\\python\\python39\\site-packages (from scikit-learn) (3.2.0)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\dell\\appdata\\roaming\\python\\python39\\site-packages (from scikit-learn) (1.3.2)\n",
-      "Installing collected packages: scikit-learn\n",
-      "  Attempting uninstall: scikit-learn\n",
-      "    Found existing installation: scikit-learn 1.3.0\n",
-      "    Uninstalling scikit-learn-1.3.0:\n",
-      "      Successfully uninstalled scikit-learn-1.3.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not install packages due to an OSError: [WinError 5] Access is denied: 'C:\\\\Users\\\\DELL\\\\AppData\\\\Roaming\\\\Python\\\\Python39\\\\site-packages\\\\~klearn\\\\.libs\\\\msvcp140.dll'\n",
-      "Check the permissions.\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "id": "ff7c4c93",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "!pip install --upgrade numpy scikit-learn"
+    "# !pip install --upgrade numpy scikit-learn"
    ]
   },
   {
@@ -82,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7acb5d58",
    "metadata": {},
    "outputs": [],
@@ -98,18 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dcc7500",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!pip install scikit-learn==1.3.0\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4b1b61ed",
    "metadata": {},
@@ -119,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "61d33a17",
    "metadata": {},
    "outputs": [
@@ -211,7 +168,7 @@
        "4   5           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "19823cf6",
    "metadata": {},
    "outputs": [
@@ -310,7 +267,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "859a17d0",
    "metadata": {},
    "outputs": [
@@ -427,7 +384,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "93b2a126",
    "metadata": {},
    "outputs": [
@@ -468,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4519718e",
    "metadata": {},
    "outputs": [
@@ -482,7 +439,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "773dc30d",
    "metadata": {},
    "outputs": [
@@ -517,7 +474,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d2aa70cc",
    "metadata": {},
    "outputs": [
@@ -547,7 +504,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -568,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a58061eb",
    "metadata": {},
    "outputs": [
@@ -578,7 +535,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -599,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "75fb6815",
    "metadata": {},
    "outputs": [
@@ -609,7 +566,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -630,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1cd9058b",
    "metadata": {},
    "outputs": [
@@ -640,7 +597,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -661,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "78501d5d",
    "metadata": {},
    "outputs": [],
@@ -673,17 +630,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6a7ca5a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2627ae60f40>"
+       "<matplotlib.legend.Legend at 0x2aff7348fd0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -711,17 +668,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4714d1f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2627acfe550>"
+       "<matplotlib.legend.Legend at 0x2aff73c1f10>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -749,17 +706,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "1f76e896",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2627aecff70>"
+       "<matplotlib.legend.Legend at 0x2aff74525b0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -787,17 +744,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "602cc7fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2627af62490>"
+       "<matplotlib.legend.Legend at 0x2aff863cd90>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -833,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "482d40af",
    "metadata": {},
    "outputs": [
@@ -905,7 +862,7 @@
        "Petal.Width       0.817941    -0.366126      0.962865     1.000000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "88dbd178",
    "metadata": {},
    "outputs": [
@@ -928,7 +885,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -960,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "db9c7612",
    "metadata": {},
    "outputs": [],
@@ -982,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "dbb95a50",
    "metadata": {},
    "outputs": [],
@@ -1003,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "0a8113b0",
    "metadata": {},
    "outputs": [
@@ -1011,7 +968,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Accuracy:  95.55555555555556\n"
+      "Logistic Regression Accuracy:  97.77777777777777\n"
      ]
     }
    ],
@@ -1024,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "18bdc720",
    "metadata": {},
    "outputs": [
@@ -1037,7 +994,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "acf96ba1",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1014,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  95.55555555555556\n"
+      "Accuracy:  97.77777777777777\n"
      ]
     }
    ],
@@ -1068,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "50d89b83",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1033,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K-nearest neighbors Accuracy:  95.55555555555556\n"
+      "K-nearest neighbors Accuracy:  97.77777777777777\n"
      ]
     }
    ],
@@ -1090,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "69590cf0",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1060,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "fe0ed8ad",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1079,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  95.55555555555556\n"
+      "Accuracy:  97.77777777777777\n"
      ]
     }
    ],
@@ -1133,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "dea5ee2f",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "1d71d0b2",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1125,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "6a029547",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "887a89bb",
    "metadata": {},
    "outputs": [
@@ -1231,39 +1188,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>7.1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2.1</td>\n",
+       "      <th>18</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <th>15</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.1</td>\n",
        "      <td>4.9</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135</th>\n",
-       "      <td>7.7</td>\n",
-       "      <td>3.0</td>\n",
+       "      <th>134</th>\n",
        "      <td>6.1</td>\n",
-       "      <td>2.3</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>1.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>1.9</td>\n",
+       "      <th>35</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1271,14 +1228,14 @@
       ],
       "text/plain": [
        "     Sepal.Length  Sepal.Width  Petal.Length  Petal.Width\n",
-       "102           7.1          3.0           5.9          2.1\n",
-       "37            4.9          3.6           1.4          0.1\n",
-       "25            5.0          3.0           1.6          0.2\n",
-       "135           7.7          3.0           6.1          2.3\n",
-       "111           6.4          2.7           5.3          1.9"
+       "18            5.7          3.8           1.7          0.3\n",
+       "15            5.7          4.4           1.5          0.4\n",
+       "52            6.9          3.1           4.9          1.5\n",
+       "134           6.1          2.6           5.6          1.4\n",
+       "35            5.0          3.2           1.2          0.2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,39 +1246,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "c2441498",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "# import pickle\n",
     "\n",
-    "# Assuming 'model' is your scikit-learn model\n",
-    "with open('saved_model11.pkl', 'wb') as file:\n",
-    "    pickle.dump(model, file)\n"
+    "# # Assuming 'model' is your scikit-learn model\n",
+    "# with open('saved_model11.pkl', 'wb') as file:\n",
+    "#     pickle.dump(model, file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "8983553b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "# import pickle\n",
     "\n",
-    "# Load the model\n",
-    "with open('saved_model11.pkl', 'rb') as file:\n",
-    "    model = pickle.load(file)\n"
+    "# # Load the model\n",
+    "# with open('saved_model11.pkl', 'rb') as file:\n",
+    "#     model = pickle.load(file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "64a403b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e16e69cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['saved_model11.pkl']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model, 'saved_model11.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ede94845",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model = joblib.load('saved_model11.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f349f074",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sklearn.__version__)"
+   ]
   }
  ],
  "metadata": {
